# eagan

./: .gitignore  README.md
backend/: app.py  blog.py  blogger.py  db.py  ddl.sql  geo.py  prompts.py  pyproject.toml  scrape.py  search.py
backend/blog/: __init__.py  reflection_search.py
ui/: bun.lockb  index.html  package.json  tailwind.config.js
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/: MarkdownRender.tsx  ThinkingBox.tsx
ui/src/components/ui/: pill.tsx
ui/src/pages/: BlogResults.tsx  HomePage.tsx  SearchResults.tsx
ui/src/types/: search.ts
